2008-09-04  Thomas Heller  <theller@python.net>

	* Removed the code that compared the timestamps of Python wrapper
	modules and type library files - this approach was totally broken.

	Generated modules are out of date if they were created by the code
	generator module with a different version number; the version
	number is now checked when a module is imported.

	The current mechanism also works correctly for generated modules
	in frozen scripts.

	Thanks to Anthony Tuininga.

2008-08-27  Thomas Heller  <theller@python.net>

	* Avoid double-free of BSTR strings under certain conditions.

	* A NULL handler is now added to the comtypes logger; this
	prevents messages like 'No handlers could be found for logger
	"comtypes"' when an error message is logged and the logging module
	is not configured.

	https://sourceforge.net/tracker/index.php?func=detail&aid=2066024&group_id=115265&atid=692940

2008-08-20  Thomas Heller  <theller@python.net>

	* Changed the codegenerator to generate 'c_longlong' instead of
	'c_float' for CURRENCY. This is not really correct since the
	CURRENCY value is a fixed point integer scaled by a factor of
	10000, but at least the code will not crash.  Need a test case.

	* comtypes.server.register: Add an optional 'executable' parameter
	to Registrar.register(cls), can be used to override the executable
	image name that comtypes detects itself.  Patch by Michael
	Robellard.

2008-08-15  Thomas Heller  <theller@python.net>

	* comtypes.client._find_gen_dir() improved (based on a patch and
	helpful thoughts of Stefan Schukat): If comtypes.gen is not a
	directory in the filesystem, or not writeable by users, a new
	directory is created which will cache generated code.  This could
	be the case if comtypes is installed in a directory that has no
	write permissions by the urrent user, if the comtypes package
	resides in a zip-archive or a zipped egg, or if comtypes is used
	in a py2exe'd script.
