@@ -1,3 +1,10 @@
+2008-09-10  Thomas Heller  <theller@python.net>
+
+	* In comtypes\_comobject.py, Invoke: Named arguments passed to
+	COMObject.IDispatch_Invoke are now (hopefully!) unpacked
+	correctly.  This should fix the order of parameters passed to MS
+	office (Word, Excel) and other (autocad?) event handlers.
+
 2008-09-04  Thomas Heller  <theller@python.net>
 
 	* Removed the code that compared the timestamps of Python wrapper
